# echo3

./: .directory  .hgignore  CMakeLists.txt  LICENSE  README.md  build.sh  cmakeplatform
cmake/linux/: echo3Config.cmake.in
cmake/wii/: echo3Config.cmake.in  libogcConfig.cmake
cmake/windowscross/: echo3Config.cmake.in
code_analysis/cppcheck/: echo_cppcheck.cfg  install_cppcheck.sh  run_cppcheck.sh
data/: AlphaRejectTest.config  BasicFragment.glsl  BasicShader.ematerial  BasicVertex.glsl  BulletPhysicsTest.config  Buttons.materialbundle  Controller.input  Cursor.ematerial  EchoLogo.ematerial  EchoLogoInternalGlow.ematerial  EchoLogoWithAlphaRejectTest.ematerial  GUITest.config  Interface.gui  Kenji.ematerial  LitEchoLogo.ematerial  MIDITest.config  MIDIView.gui  MenuA.gui  MenuB.gui  MenuC.gui  MenuTest.config  Messages.txt  MultiStageEchoLogo.ematerial  MultiStageTexturingTestApplication.config  MultipleConfigurationFilesTest1.config  MultipleConfigurationFilesTest2.config  MultipleConfigurationFilesTest3.config  PBRTest.config  Particle.ematerial  ParticleTest.config  RenderTest.config  RenderToTextureTest.config  ResourceReloadTest.config  ScissorTest.config  SectionTest.config  ShaderPoints.ematerial  ShaderPointsFragment.glsl  ShaderPointsGeometry.glsl  ShaderPointsTest.config  ShaderPointsVertex.glsl  (+12 more)
data/Fonts/: DejaVuSans.font  Nosifer-Regular.font  NotoSans-Regular.font  NotoSansSinhala-Regular.font
data/tls/: cacert.pem  tlstest-cert.pem  tlstest-key.pem
dependencies/: Readme.txt  edepbuild  edepcleanplatform  edepcleanx  getdependencies
docs/: LicenseInformation.txt  NotoSansSinhala-Regular-LICENSE.txt
env/: Android-postbuild.sh  Android-prebuild.config  Debug-prebuild.config  Release-prebuild.config  Wii-postbuild.sh  Wii-prebuild.config  Windows-prebuild.config
include/echo/: Application.h  Assert.h  Platform.h  PlatformStub.h  Types.h  UTF8String.h
nbproject/: Makefile-Android.mk  Makefile-Debug.mk  Makefile-Release.mk  Makefile-Wii.mk  Makefile-Windows.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Android.bash  Package-Debug.bash  Package-Release.bash  Package-Wii.bash  Package-Windows.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml
resources/Materials/: GenerateMaterial  Widget.ematerial  materials.list  pbr-template-parallax.ematerial  pbr-template.ematerial
scripts/: BuildEcho.sh  FindAndCopyDLLs.sh  GenerateReleaseFile.sh  PackageAllAsDeb.sh  README.md  SetupAndroidDevelopment.sh  SetupDevKitPro.sh  SetupEcho.sh  SetupStandaloneDependencies.sh  cmakeplatform  echoConvertResource  echoConvertResourcesInDirectory
scripts/pbtextjson/: package-lock.json  package.json  pbtextjson.mjs
src/: Application.cpp
src/Animation/: Animation.cpp  AnimationState.cpp  AnimationTrack.cpp  BoneAnimationTrack.cpp  Skeleton.cpp  SkeletonAnimation.cpp  SkeletonAnimationState.cpp  SpriteAnimation.cpp
src/Audio/: Audio.cpp  AudioBuffer.cpp  AudioPlayer.cpp  AudioSource.cpp  AudioStream.cpp
src/Chrono/: CPUTimer.cpp  Chrono.cpp  FrameRateLimiter.cpp
src/FileSystem/: File.cpp  FileReferenceEncrypted.cpp  FileReferenceFile.cpp  FileReferenceMemory.cpp  FileReferenceVFS.cpp  FileSystem.cpp  FileSystemSource.cpp  FileSystemSourceEncrypted.cpp  FileSystemSourceFile.cpp  FileSystemSourceMemory.cpp  FileSystemSourceVFS.cpp
src/GUI/: Button.cpp  Container.cpp  Cursor.cpp  Element.cpp  GUI.cpp  Image.cpp  Layout.cpp  Menu.cpp  Screen.cpp  Text.cpp  TextBox.cpp
src/Graphics/: Camera.cpp  CameraDollies.cpp  Colour.cpp  CubeMapTexture.cpp  ElementBuffer.cpp  Frustum.cpp  Light.cpp  Material.cpp  MaterialAnimation.cpp  Mesh.cpp  MultiRenderer.cpp  MultipassRenderable.cpp  Node.cpp  PrimitiveTypes.cpp  RenderPass.cpp  RenderTarget.cpp  RenderTargetNotifier.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  SceneEntity.cpp  SceneRenderable.cpp  Shader.cpp  ShaderProgram.cpp  SkyBox.cpp  Sprite.cpp  StereoscopicRenderer.cpp  SubMesh.cpp  Terrain.cpp  TextMesh.cpp  Texture.cpp  TextureUnit.cpp  VertexAttribute.cpp  VertexBuffer.cpp  Viewport.cpp
src/Input/: GenericInputDevice.cpp  Input.cpp  InputDevice.cpp  (+7 more)
templates/cmake/: CMakeLists.txt  GenerateProject.sh  apply_common  buildplatform  cmakeplatform  runplatform
templates/cmake/EchoApplicationProject/: description
templates/cmake/EchoApplicationProject/include/: Game.h  MyProjectApplication.h
templates/cmake/EchoApplicationProject/resources/: MyProjectApplication.config  meshes.list  skeletons.list
templates/cmake/EchoApplicationProject/resources/Fonts/: DejaVuSans.font
templates/cmake/EchoApplicationProject/resources/Materials/: Cursor.ematerial  EchoText.ematerial  LitEchoLogo.ematerial  SettingsButton.materialBundle  materials.list
templates/cmake/EchoApplicationProject/resources/Menu/: HUD.gui  Menu.gui  Settings.gui
templates/cmake/EchoApplicationProject/src/: Game.cpp  MyProjectApplication.cpp  main.cpp
templates/cmake/EchoApplicationProject/vscode/: launch.json  settings.json
templates/cmake/ThirdPersonGame/: description
templates/cmake/ThirdPersonGame/include/: Game.h  GameEntity.h  GameEntityState.h  MainMenu.h  MyProjectApplication.h  ThirdPersonCameraController.h
templates/cmake/ThirdPersonGame/resources/: MyProjectApplication.config
templates/cmake/ThirdPersonGame/resources/Characters/: materials.list  meshes.list  skeletons.list
templates/cmake/ThirdPersonGame/resources/Characters/Kenji/: Kenji.ematerial  Kenji.mesh  Kenji_mesh.skeleton
templates/cmake/ThirdPersonGame/resources/Fonts/: fonts.list
templates/cmake/ThirdPersonGame/resources/Input/: Player.input
templates/cmake/ThirdPersonGame/resources/Materials/: Button.materialBundle  Divider.ematerial  Echo.ematerial  EchoText.ematerial
templates/cmake/ThirdPersonGame/resources/Menu/: HUD.gui  Menu.gui  Menus.list  SuperMenu.gui
templates/cmake/ThirdPersonGame/src/: Game.cpp  GameEntity.cpp  GameEntityState.cpp  MainMenu.cpp  MyProjectApplication.cpp  ThirdPersonCameraController.cpp  main.cpp
templates/cmake/ThirdPersonGame/vscode/: c_cpp_properties.json
(+555 files in other folders)
